tests/fixtures/negative/reliable_try_publish_ignored.wrela
// expect: SEM0045: reliable try_publish result must be observed
module negative.reliable_try_publish_ignored

module machine.x86_64.topic_u64
class U64ReliablePublisher { fn try_publish(self, value: U64) -> Bool { return true } }

executor Producer {
    pub: U64ReliablePublisher
    start fn run(self) -> never {
        self.pub.try_publish(value = 1)
        while true {}
    }
}
